force-app/main/default/objects/Financial_Account__c/fields/dupcheck__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__c</fullName>
    <label>dupcheck</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>