force-app/main/default/objects/Financial_Account__c/fields/dupfin__c.field-meta.xml
<CustomField>
    <fullName>dupfin__c</fullName>
    <label>dupfin</label>
    <length>30</length>
    <type>Text</type>
</CustomField>