force-app/main/default/objects/Financial_Account__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship</label>
    <referenceTo>Relationship__c</referenceTo>
    <relationshipLabel>Financial Accounts</relationshipLabel>
    <relationshipName>Financial_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>